Added Images. Added name heading. Completed mark 1 version of index.html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Photo Site</title>
 </head>
 <body>
-    
+    <!-- Symbols can be used in HTML -->
+    <p>Riley &diams; Harper</p>
+    <img src="Images/mistyMountains.jpeg" alt="Snow covered mountains">
+    <img src="Images/waterfall.jpeg" alt="waterfall">
+    <img src="Images/tree.jpeg" alt="tree">
+    <img src="Images/ocean.jpeg" alt="ocean">
+    <img src="Images/field.jpeg" alt="Field in the country">
+    <img src="Images/nonSnowyMountains.jpeg" alt="Mountains ridge">
+    <img src="Images/narnia.jpeg" alt="Snow covered forest">
+    <img src="Images/tatooine.jpeg" alt="Sand">
 </body>
 </html>
